Spark Avro Reader with Abis library, Spark downgrade to latest 3.x